--- a/07-GoogleFontDemo/Unsolved/html-template.html
+++ b/07-GoogleFontDemo/Unsolved/html-template.html
@@ -3,39 +3,91 @@
 <!-- Instructor: add in a Google font of your choice! -->
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
 
-    <meta charset="UTF-8">
-    <title>Stuff I Think About</title>
+<head>
 
-    <!-- CSS Reference -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Stuff I Think About</title>
 
-  </head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comforter+Brush&family=Oswald:wght@500&display=swap"
+    rel="stylesheet">
 
-  <body>
+  <!-- CSS Reference -->
+  <link rel="stylesheet" href="style.css">
 
-    <h1>I'm a deep thinking dude.</h1>
+</head>
 
-    <hr>
+<body>
 
-    <h3>Here are a few things I've thought about</h3>
+  <h1>I'm a deep thinking dude.</h1>
 
-    <h4>Thought Blurb 1:</h4>
-    <p class="thought1">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
-    </p>
-      
-    <h4>Thought Blurb 2:</h4>
-    <p class="thought2">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
-    </p>
+  <hr>
 
-    <h4>Thought Blurb 3:</h4>
-    <p class="thought3">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
-    </p>
-    
-  </body>
+  <h3>Here are a few things I've thought about</h3>
+
+  <h4>Thought Blurb 1:</h4>
+  <p class="thought1">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
+  </p>
+
+  <h4>Thought Blurb 2:</h4>
+  <p class="thought2">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
+  </p>
+
+  <h4>Thought Blurb 3:</h4>
+  <p class="thought3">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem
+    ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio
+    temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae?
+  </p>
+
+</body>
 
 </html>
