--- a/06-CSSTypography/Unsolved/html-template.html
+++ b/06-CSSTypography/Unsolved/html-template.html
@@ -10,9 +10,34 @@
 
   <!-- Add a CSS Reference Here! -->
   <link rel="stylesheet" href="template.css" type="text/css" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
 </head>
 
 <body>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="https://DuckDuckGo.com">DuckDuckGo Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link dropdown-toggle" href="https://Google.com">Google Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://getbootstrap.com/">Bootstrap Link</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled">Disabled Link</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+
   <h1 class="header">I'm a deep thinking dude.</h1>
 
   <hr />
@@ -20,6 +45,7 @@
   <h3>Here are a few things I've thought about</h3>
 
   <h4 class="h4">Thought Blurb 1:</h4>
+
   <p class="first">
     <!-- Add a class here! Bold the text! -->
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium
@@ -48,6 +74,7 @@
     corporis odio temporibus minima et molestias dolorem, sit unde id soluta
     perspiciatis eos laboriosam tempore molestiae?
   </p>
+
 
   <h4 class="h4">Thought Blurb 2:</h4>
   <p class="second">
@@ -108,6 +135,11 @@
     corporis odio temporibus minima et molestias dolorem, sit unde id soluta
     perspiciatis eos laboriosam tempore molestiae?
   </p>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
