JsQuery Assignment Cleaner Colored Column Commit

--- a/Bootstrap Project/JsAssignment.html
+++ b/Bootstrap Project/JsAssignment.html
@@ -18,20 +18,14 @@
 
     <p style="text-align: center;">Bootstrap and JS/jQuery Worksheet</p>
     <h2 style="text-align: center; text-decoration: underline;">Infosys Class Work</h2>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row gx-5 justify-content-md-center">
-            <div class="col">
-                <div class=" p-4 border border-3 border-dark bg-danger">Column 1</div>
-
-            </div>
-            <div class=" col">
-                <div class="p-4 border border-3 border-warning bg-primary">Column 2</div>
-            </div>
-            <div class="col">
-                <div class="p-4 border border-3 border-danger bg-success">Column 3</div>
-            </div>
+            <div class="col p-4 m-2 border border-3 border-dark bg-danger">Box 1</div>
+            <div class=" col p-4 m-2 border border-3 border-warning bg-primary">Box 2</div>
+            <div class="col p-4 m-2 border border-3 border-danger bg-success">Box 3</div>
         </div>
     </div>
+
     <h3 style="text-align: center; text-decoration: underline; color: blue" class="mt-4">Change Buttons</h3>
 
     <!--**** Change Button ****-->
