--- a/Bootstrap Project/columns.html
+++ b/Bootstrap Project/columns.html
@@ -41,6 +41,14 @@
     </div>
     <h4 style="text-align: center; text-decoration: underline; color: blue">Hide Buttons</h4>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col border border-2 bg-danger p-4 m-2">1</div>
+            <div class="col border border-2 bg-secondary p-4 m-2">2</div>
+            <div class="col border border-2 bg-warning p-4 m-2">3</div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
