JsAssignmnt Update Dash Border

--- a/Bootstrap Project/columns.html
+++ b/Bootstrap Project/columns.html
@@ -32,10 +32,10 @@
                 <button type="button" class="btn btn-info">Change Box 2</button>
             </div>
             <div class="col d-inline-flex justify-content-end">
-                <button type="button" class="btn btn-primary">Change Box 3</button>
+                <button type="button reset" value="reset" class="btn btn-warning">Change Box 3</button>
             </div>
             <div class="col d-inline-flex justify-content-end">
-                <button type="button" class="btn btn-primary">Change All</button>
+                <input class="btn btn-danger rounded-pill" type="reset" value="Reset">
             </div>
         </div>
     </div>
