--- a/Bootstrap Project/JsAssignment.html
+++ b/Bootstrap Project/JsAssignment.html
@@ -13,16 +13,17 @@
     <title>Learning Buttons and Columns</title>
 </head>
 
-<body>
+<body class="bg-dark">
+
     <!--**** Colored Columns ****-->
 
-    <p style="text-align: center;">Bootstrap and JS/jQuery Worksheet</p>
-    <h2 style="text-align: center; text-decoration: underline;">Infosys Class Work</h2>
+    <p style="text-align: center; color: white">Bootstrap and JS/jQuery Worksheet</p>
+    <h2 style="text-align: center; text-decoration: underline; color: white">Infosys Class Work</h2>
     <div class="container-fluid">
         <div class="row gx-5 justify-content-md-center">
-            <div class="col p-4 m-2 border border-3 border-dark bg-danger">Box 1</div>
-            <div class=" col p-4 m-2 border border-3 border-warning bg-primary">Box 2</div>
-            <div class="col p-4 m-2 border border-3 border-danger bg-success">Box 3</div>
+            <div class="col rounded-3 p-4 m-2 border border-3 border-light bg-danger">Box 1</div>
+            <div id="box2" class="col rounded-3 p-4 m-2 bg-primary">Box 2</div>
+            <div class="col rounded-3 p-4 m-2 border border-3 border-danger bg-success">Box 3</div>
         </div>
     </div>
 
@@ -33,21 +34,21 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-outline-primary">Change Box 1
+                <button type="button" class="btn btn-outline-primary rounded-pill">Change Box 1
                     <i class="bi bi-emoji-heart-eyes-fill"></i></button>
             </div>
             <div class="col">
-                <button type="button" class="btn btn-outline-info">Change Box 2
+                <button type="button" class="btn btn-outline-info rounded-pill">Change Box 2
                     <i class="bi bi-emoji-laughing"></i>
                 </button>
             </div>
             <div class="col d-flex justify-content-end">
-                <button type="button" class="btn btn-outline-primary">Change Box 3
+                <button type="button" class="btn btn-outline-primary rounded-pill">Change Box 3
                     <i class="bi bi-emoji-smile-fill"></i>
                 </button>
             </div>
             <div class="col d-flex justify-content-end">
-                <button type="button" class="btn btn-outline-success">Change All
+                <button type="button" class="btn btn-outline-success rounded-pill">Change All
                     <i class="bi bi-emoji-sunglasses-fill"></i>
                 </button>
             </div>
@@ -60,22 +61,22 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-primary">Hide Box 1
+                <button type="button" class="btn btn-primary rounded-pill">Hide Box 1
                     <i class="bi bi-emoji-dizzy-fill"></i>
                 </button>
             </div>
             <div class="col">
-                <button type="button" class="btn btn-info">Hide Box 2
+                <button type="button" class="btn btn-info rounded-pill">Hide Box 2
                     <i class="bi bi-emoji-frown-fill"></i>
                 </button>
             </div>
             <div class="col d-flex justify-content-end">
-                <button type="button" class="btn btn-primary">Hide Box 3
+                <button type="button" class="btn btn-primary rounded-pill">Hide Box 3
                     <i class="bi bi-emoji-expressionless-fill"></i>
                 </button>
             </div>
             <div class="col d-flex justify-content-end">
-                <button type="button" class="btn btn-primary">Hide All
+                <button type="button" class="btn btn-primary rounded-pill">Hide All
                     <i class="bi bi-emoji-angry"></i>
                 </button>
             </div>
@@ -87,12 +88,12 @@
     <div class="container">
         <div class="row">
             <div class="col d-inline-flex justify-content-start mt-5">
-                <button type="button" class="btn btn-danger">Reset Colors
+                <button type="button" class="btn btn-danger rounded-pill">Reset Colors
                     <i class="bi bi-exclamation-circle"></i>
                 </button>
             </div>
             <div class="col d-inline-flex justify-content-end mt-5">
-                <button type="button" class="btn btn-warning">Show All
+                <button type="button reset" value="reset" class="btn btn-warning rounded-pill">Show All
                     <i class="bi bi-eye"></i>
                 </button>
             </div>
