--- a/Bootstrap Project/JsAssignment.html
+++ b/Bootstrap Project/JsAssignment.html
@@ -20,10 +20,10 @@
     <p style="text-align: center; color: white">Bootstrap and JS/jQuery Worksheet</p>
     <h2 style="text-align: center; text-decoration: underline; color: white">Infosys Class Work</h2>
     <div class="container-fluid">
-        <div class="row gx-5 justify-content-md-center">
-            <div class="col rounded-3 p-4 m-2 border border-3 border-light bg-danger">Box 1</div>
-            <div id="box2" class="col rounded-3 p-4 m-2 bg-primary">Box 2</div>
-            <div class="col rounded-3 p-4 m-2 border border-3 border-danger bg-success">Box 3</div>
+        <div class="row row-cols-4 gx-5 justify-content-md-center">
+            <div id="box1" class="col rounded-3 p-4 m-2 border border-3 border-light">Box 1</div>
+            <div id="box2" class="col rounded-3 p-4 m-2">Box 2</div>
+            <div id="box3" class="col rounded-3 p-4 m-2 border border-3 border-danger">Box 3</div>
         </div>
     </div>
 
@@ -34,21 +34,21 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-outline-primary rounded-pill">Change Box 1
+                <button onclick="myFunc()" type="button" class="btn btn-outline-primary rounded-pill">Change Box 1
                     <i class="bi bi-emoji-heart-eyes-fill"></i></button>
             </div>
             <div class="col">
-                <button type="button" class="btn btn-outline-info rounded-pill">Change Box 2
+                <button onclick="myFunc2()" type="button" class="btn btn-outline-info rounded-pill">Change Box 2
                     <i class="bi bi-emoji-laughing"></i>
                 </button>
             </div>
             <div class="col d-flex justify-content-end">
-                <button type="button" class="btn btn-outline-primary rounded-pill">Change Box 3
+                <button onclick="myFunc3()" type="button" class="btn btn-outline-primary rounded-pill">Change Box 3
                     <i class="bi bi-emoji-smile-fill"></i>
                 </button>
             </div>
             <div class="col d-flex justify-content-end">
-                <button type="button" class="btn btn-outline-success rounded-pill">Change All
+                <button onclick="changeAll()" type="button" class="btn btn-outline-success rounded-pill">Change All
                     <i class="bi bi-emoji-sunglasses-fill"></i>
                 </button>
             </div>
@@ -61,17 +61,17 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <button type="button" class="btn btn-primary rounded-pill">Hide Box 1
+                <button onclick="myFunction()" type="button" class="btn btn-primary rounded-pill">Hide Box 1
                     <i class="bi bi-emoji-dizzy-fill"></i>
                 </button>
             </div>
             <div class="col">
-                <button type="button" class="btn btn-info rounded-pill">Hide Box 2
+                <button onclick="myFunction2()" type="button" class="btn btn-info rounded-pill">Hide Box 2
                     <i class="bi bi-emoji-frown-fill"></i>
                 </button>
             </div>
             <div class="col d-flex justify-content-end">
-                <button type="button" class="btn btn-primary rounded-pill">Hide Box 3
+                <button onclick="myFunction3()" type="button" class="btn btn-primary rounded-pill">Hide Box 3
                     <i class="bi bi-emoji-expressionless-fill"></i>
                 </button>
             </div>
@@ -100,7 +100,7 @@
         </div>
     </div>
 
-
+    <script src="JsAssignment.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
