jQuery Bootstrap Third update

--- a/Bootstrap Project/JsAssignment.html
+++ b/Bootstrap Project/JsAssignment.html
@@ -44,7 +44,8 @@
                     </button>
                 </div>
                 <div class="col d-flex justify-content-end">
-                    <button onclick="myFunc3()" type="button" class="btn btn-outline-primary rounded-pill">Change Box 3
+                    <button id="color_3" onclick="myFunc3()" type="button"
+                        class="btn btn-outline-primary rounded-pill">Change Box 3
                         <i class="bi bi-emoji-smile-fill"></i>
                     </button>
                 </div>
