--- a/Bootstrap Project/JsAssignment.html
+++ b/Bootstrap Project/JsAssignment.html
@@ -20,7 +20,7 @@
     <p style="text-align: center; color: white">Bootstrap and JS/jQuery Worksheet</p>
     <h2 style="text-align: center; text-decoration: underline; color: white">Infosys Class Work</h2>
     <form>
-        <div id="main_Div' class=" container-fluid">
+        <div id="main_Div" class="container-fluid">
             <div class="row row-cols-4 gx-5 justify-content-md-center">
                 <div id="box1" class="col rounded-3 p-4 m-2 border border-3 border-light">Box 1</div>
                 <div id="box2" class="col rounded-3 p-4 m-2">Box 2</div>
