jQuery Text Style update

--- a/Bootstrap Project/JsAssignment.html
+++ b/Bootstrap Project/JsAssignment.html
@@ -17,8 +17,8 @@
 
     <!--**** Colored Columns ****-->
 
-    <p style="text-align: center; color: white">Bootstrap and JS/jQuery Worksheet</p>
-    <h2 style="text-align: center; text-decoration: underline; color: white">Infosys Class Work</h2>
+    <h1 style="text-align: center; color: white" class="display-3">Bootstrap and JS/jQuery Worksheet</h1>
+    <h2 style="text-align: center; text-decoration: underline; color: white" class="display-4">Infosys Class Work</h2>
     <form>
         <div id="main_Div" class="container-fluid">
             <div class="row row-cols-4 gx-5 justify-content-md-center">
@@ -28,7 +28,8 @@
             </div>
         </div>
 
-        <h3 style="text-align: center; text-decoration: underline; color: blue" class="mt-4">Change Buttons</h3>
+        <h3 class="display-5" style="text-align: center; text-decoration: underline; color: blue" class="mt-4">Change
+            Buttons</h3>
 
         <!--**** Change Button ****-->
 
@@ -57,7 +58,8 @@
                 </div>
             </div>
         </div>
-        <h4 style="text-align: center; text-decoration: underline; color: blue" class="mt-4">Hide Buttons</h4>
+        <h4 class="display-6" style="text-align: center; text-decoration: underline; color: blue" class="mt-4">Hide
+            Buttons</h4>
 
         <!--**** Hide Buttons ****-->
 
