--- a/index.html
+++ b/index.html
@@ -1,75 +1,122 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
 
 <head>
-  <link rel="stylesheet" type="text/css" href="./CSS/style.css">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale-1.0">
-  <link rel="stylesheet" href="../../Font Awesome Icons/font-awesome-4.7.0/css/font-awesome.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="Bootstrap Project/JsAssignment.css" type="text/css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-  <title>CSS Stylesheets with Relative Paths</title>
+  <title>Learning Buttons and Columns</title>
 </head>
 
-<body>
-  <header>
-    <h1>Student Bio</h1>
-  </header>
+<body class="bg-dark">
+
+  <!--**** Colored Columns ****-->
+
+  <h1 style="text-align: center; color: white" class="display-3">Bootstrap and JS/jQuery Worksheet</h1>
+  <h2 style="text-align: center; text-decoration: underline; color: white" class="display-4">Infosys Class Work</h2>
+  <form>
+    <div id="main_Div" class="container-fluid">
+      <div class="row row-cols-4 gx-5 justify-content-md-center">
+        <div id="box1" class="col rounded-3 p-4 m-2 border border-3 border-light">Box 1</div>
+        <div id="box2" class="col rounded-3 p-4 m-2">Box 2</div>
+        <div id="box3" class="col rounded-3 p-4 m-2 border border-3 border-danger">Box 3</div>
+      </div>
+    </div>
+
+    <h3 class="display-5" style="text-align: center; text-decoration: underline; color: blue" class="mt-4">Change
+      Buttons</h3>
+
+    <!--**** Change Button ****-->
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <button onclick="myFunc()" type="button" class="btn btn-outline-primary rounded-pill">Change Box 1
+            <i class="bi bi-emoji-heart-eyes-fill"></i></button>
+        </div>
+        <div class="col">
+          <button onclick="myFunc2()" type="button" class="btn btn-outline-info rounded-pill">Change Box 2
+            <i class="bi bi-emoji-laughing"></i>
+          </button>
+        </div>
+        <div class="col d-flex justify-content-end">
+          <button id="color_3" onclick="myFunc3()" type="button" class="btn btn-outline-primary rounded-pill">Change Box
+            3
+            <i class="bi bi-emoji-smile-fill"></i>
+          </button>
+        </div>
+        <div class="col d-flex justify-content-end">
+          <button id="change" onclick="changeAll()" type="button" class="btn btn-outline-success rounded-pill">Change
+            All
+            <i class="bi bi-emoji-sunglasses-fill"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+    <h4 class="display-6" style="text-align: center; text-decoration: underline; color: blue" class="mt-4">Hide
+      Buttons</h4>
+
+    <!--**** Hide Buttons ****-->
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <button onclick="myFunction()" type="button" class="btn btn-primary rounded-pill">Hide Box 1
+            <i class="bi bi-emoji-dizzy-fill"></i>
+          </button>
+        </div>
+        <div class="col">
+          <button onclick="myFunction2()" type="button" class="btn btn-info rounded-pill">Hide Box 2
+            <i class="bi bi-emoji-frown-fill"></i>
+          </button>
+        </div>
+        <div class="col d-flex justify-content-end">
+          <button onclick="myFunction3()" type="button" class="btn btn-primary rounded-pill">Hide Box 3
+            <i class="bi bi-emoji-expressionless-fill"></i>
+          </button>
+        </div>
+        <div class="col d-flex justify-content-end">
+          <button id="hide" type="button" class="btn btn-primary rounded-pill">Hide All
+            <i class="bi bi-emoji-angry"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!--**** Reset Boxes ****-->
+
+    <div class="container">
+      <div class="row">
+        <div class="col d-inline-flex justify-content-start mt-5">
+          <button id="reset_Boxes" onclick="resetAll()" type="button reset" value="reset"
+            class="btn btn-danger rounded-pill">Reset
+            Colors
+            <i class="bi bi-exclamation-circle"></i>
+          </button>
+        </div>
+        <div id="show_All" onclick="resetBtn()" class="col d-inline-flex justify-content-end mt-5">
+          <button type="button" class="btn btn-warning rounded-pill">Show
+            All
+            <i class="bi bi-eye"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+  </form>
 
 
-  <!--Main Bio-->
+  <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous"></script>
 
-  <div class="container">
-    <section id="main-bio">
-      <h2 id="name">Joel Jimenez</h2>
-
-      <!--Bio Image-->
-
-      <img id="bio-image" src="2neon_ribbons_4k_2-1920x1080.jpg" alt="Digital Neon Ribbons" />
-
-      <p>
-        Contrary to popular belief, Lorem Ipsum is not simply random text. It
-        has roots in a piece of classical Latin literature from 45 BC, making
-        it over 2000 years old. Richard McClintock, a Latin professor at
-        Hampden-Sydney College in Virginia, looked up one of the more obscure
-        Latin words, consectetur, from a Lorem Ipsum passage, and going
-        through the cites of the word in classical literature, discovered the
-        undoubtable source. Lorem Ipsum comes from sections 1.10.32 and
-        1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
-        Evil) by Cicero, written in 45 BC. This book is a treatise on the
-        theory of ethics, very popular during the Renaissance. The first line
-        of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in
-        section 1.10.32.<a href="http://www.lipsum.com/">www.lipsum.com</a>
-      </p>
-    </section>
-
-    <!--Contact Information-->
-
-    <section id="contact-info">
-      <h2>Contact Info</h2>
-
-
-      <ul class="fa-ul">
-        <!--Email Icon-->
-        <li><i class="fa fa-envelope" aria-hidden="true"></i>
-
-          <strong>Email:</strong>
-          <a href="https://JoelJ2012@yahoo.com">JoelJ2012@yahoo.com</a>
-        </li>
-        <!--Github Icon-->
-        <li><i class="fa fa-github" aria-hidden="true"></i>
-          <strong>Github:</strong>
-          <a href="https://github.com/JayScrill">JayScrill</a>
-        </li>
-        <!--Hour Glass Icon-->
-        <li><i class="fa fa-hourglass-half" aria-hidden="true"></i>
-          <strong>Portfolio:</strong> <a href="#">coming soon</a>
-        </li>
-      </ul>
-    </section>
-  </div>
-
-
-
+  <script src="Bootstrap Project/JsAssignment.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
 </body>
 
